--- a/package.json
+++ b/package.json
@@ -22,26 +22,39 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^21.1.5",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngrx/signals": "^21.0.1",
+    "@stomp/stompjs": "^7.3.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
+    "dayjs": "^1.11.19",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.5",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.0",
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.6",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.0",
     "typescript": "~5.9.2"
   }
 }
